# claudatui

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  release.toml
.github/workflows/: ci.yml  release.yml
src/: app.rs  daemon_client.rs  event.rs  event_loop.rs  lib.rs  main.rs  session.rs
src/app/: actions.rs  mod.rs  navigation.rs  panes.rs  sessions.rs  state.rs
src/bookmarks/: manager.rs  mod.rs
src/claude/: archive.rs  conversation.rs  grouping.rs  history.rs  mod.rs  sessions.rs  watcher.rs  worktree.rs
src/config/: mod.rs
src/daemon/: mod.rs  protocol.rs  session_manager.rs
src/git/: mod.rs  worktree.rs
src/handlers/: keyboard.rs  mod.rs  modal.rs  mouse.rs
src/input/: mod.rs  which_key.rs
src/pty/: handler.rs  mod.rs
src/search/: engine.rs  mod.rs  types.rs
src/session/: manager.rs  mod.rs  types.rs
src/ui/: help_menu.rs  layout.rs  mod.rs  mosaic.rs  sidebar.rs  terminal_pane.rs  toast.rs  toast_widget.rs  which_key.rs
src/ui/modal/: mod.rs  new_branch.rs  new_project.rs  profile.rs  search.rs  workspace.rs  worktree.rs  worktree_search.rs
src/ui/sidebar/: filter.rs  items.rs  mod.rs  rendering.rs
