[package]
name = "claudatui"
version = "0.1.0"
edition = "2021"
description = "A TUI for browsing and managing Claude Code conversations"
authors = ["Brandon"]
license = "MIT"
repository = "https://github.com/brs98/claudatui"
homepage = "https://github.com/brs98/claudatui"
readme = "README.md"
keywords = ["tui", "claude", "ai", "terminal", "ratatui"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "7"
portable-pty = "0.8"
dirs = "5"
chrono = "0.4"
anyhow = "1"
vt100 = "0.15"
nix = { version = "0.29", features = ["process", "user"] }
arboard = "3"
ratatui-explorer = "0.2"

[[bin]]
name = "claudatui"
path = "src/main.rs"
