[package]
name = "claudatui"
version = "0.1.12"
edition = "2021"
description = "A TUI for browsing and managing Claude Code conversations"
authors = ["Brandon"]
license = "MIT"
repository = "https://github.com/brs98/claudatui"
homepage = "https://github.com/brs98/claudatui"
readme = "README.md"
keywords = ["tui", "claude", "ai", "terminal", "ratatui"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "7"
portable-pty = "0.8"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
vt100 = "0.15"
nix = { version = "0.29", features = ["process", "user"] }
arboard = "3"
ratatui-explorer = "0.2"
toml = "0.8"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "claudatui"
path = "src/main.rs"

[lints.clippy]
cloned_instead_of_copied = "warn"
flat_map_option = "warn"
redundant_closure_for_method_calls = "warn"
unnested_or_patterns = "warn"
needless_pass_by_value = "warn"
implicit_clone = "warn"
inefficient_to_string = "warn"
manual_let_else = "warn"
semicolon_if_nothing_returned = "warn"
unused_self = "warn"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
